--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <img class="profile" src="{{ site.baseurl }}public/{{ site.author.profile }}" width="150px">
       <h2>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
