--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,6 +29,6 @@
 
     </nav>
 
-    <p>Mildronize &copy; {{ site.time | date: '%Y' }}. <br/>All rights reserved.</p>
+    <p class="text-small">Mildronize &copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
