--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,24 @@
 layout: default
 ---
 
+<!--
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
+-->
+
+<article itemscope itemtype="http://schema.org/Article">
+  <div class="post">
+    <h1 itemprop="name" class="post-title">{{ page.title }}</h1>
+    <p class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</p>
+    <p class="entry-tags">{% for tag in page.tags %}<div class="label"><a href="{{ site.url }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></div>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
+<!--    {% if page.comments %}<p><a href="{{ site.url }}{{ page.url }}#disqus_thread">Comments</a></p>{% endif %}-->
+    {{ content }}
+<!--    {% if page.comments %}<div id="disqus_thread"></div>{% endif %}-->
+  </div>
+</article>
 
 <div class="related">
   <h2>Related Posts</h2>
