--- a/public/css/mildronize.css
+++ b/public/css/mildronize.css
@@ -21,7 +21,7 @@
  */
 
 html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "PT Sans", Boon, Arial, sans-serif;
 }
 @media (min-width: 48em) {
   html {
