--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
   </title>
 
   <!-- CSS -->
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/font-awesome-4.3.0.min.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
