--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img class="profile" src="{{ site.baseurl }}public/{{ site.author.profile }}" width="150px">
+      <img class="profile" src="{{ site.baseurl }}public/{{ site.author.profile }}" width="120px">
       <h2>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
@@ -28,7 +28,16 @@
       {% endfor %}
 
     </nav>
-
+    <p class="social-icons">
+      <a href="https://github.com/mildronize"><i class="fa fa-github fa-2x"></i></a>
+      <!-- <a href="bitbucket"><i class="fa fa-bitbucket fa-2x"></i></a> -->
+<!--      <a href="twitter"><i class="fa fa-twitter fa-2x"></i></a>-->
+<!--      <a href="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>-->
+<!--      <a href="google-plus"><i class="fa fa-plus fa-2x"></i></a>-->
+      <a href="/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
+    </p>
+    
+    
     <p class="text-small">Mildronize &copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
