add search page,

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/font-awesome-4.3.0.min.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/buttons-min.css"> <!-- pure css -->
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/forms-min.css"> <!-- pure css -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
