--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,23 +21,27 @@
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
         {% if node.title != null %}
-          {% if node.layout == "page" %}
+          {% if node.layout == "page" | node.add_menu != null %}
             <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
 
+
     </nav>
+
     <p class="social-icons">
+      <a href="{{ site.baseurl }}search"><i class="fa fa-search fa-2x"></i></a>
+      <a href="/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
       <a href="https://github.com/mildronize"><i class="fa fa-github fa-2x"></i></a>
       <!-- <a href="bitbucket"><i class="fa fa-bitbucket fa-2x"></i></a> -->
 <!--      <a href="twitter"><i class="fa fa-twitter fa-2x"></i></a>-->
 <!--      <a href="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>-->
 <!--      <a href="google-plus"><i class="fa fa-plus fa-2x"></i></a>-->
-      <a href="/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
+
     </p>
-    
-    
+
+
     <p class="text-small">Mildronize &copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
