--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,8 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/boon-font.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/mildronize.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+  <!-- Search bar -->
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/expanding-search-bar.css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
