remove search icon at sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,9 +31,9 @@
     </nav>
 
     <p class="social-icons">
-      <a href="{{ site.baseurl }}search"><i class="fa fa-search fa-2x"></i></a>
-      <a href="/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
+      <!-- <a href="{{ site.baseurl }}search"><i class="fa fa-search fa-2x"></i></a> -->
       <a href="https://github.com/mildronize"><i class="fa fa-github fa-2x"></i></a>
+      <a href="/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
       <!-- <a href="bitbucket"><i class="fa fa-bitbucket fa-2x"></i></a> -->
 <!--      <a href="twitter"><i class="fa fa-twitter fa-2x"></i></a>-->
 <!--      <a href="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>-->
