--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -17,10 +17,12 @@ layout: default
     <p class="entry-tags">{% for tag in page.tags %}<div class="label"><a href="{{ site.url }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></div>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
 <!--    {% if page.comments %}<p><a href="{{ site.url }}{{ page.url }}#disqus_thread">Comments</a></p>{% endif %}-->
     <p>{{ page.description }}</p>
-    <img src="{{ page.image }}">
-    <a class="pure-button button-small" href="{{ page.home }}"><i class="fa fa-home"></i>Home</a>
-    <a class="pure-button button-small" href="{{ page.demo }}"><i class="fa fa-play"></i>Demo</a>
-    <a class="pure-button button-small" href="{{ page.source }}"><i class="fa fa-code"></i>Source code</a>
+    {% if page.image != null %}<img src="{{ page.image }}">{% endif %}
+    <p>
+        {% if page.home != null %}<a class="pure-button button-small" href="{{ page.home }}"><i class="fa fa-home"></i>Home</a>{% endif %}
+        {% if page.demo != null %}<a class="pure-button button-small" href="{{ page.demo }}"><i class="fa fa-play"></i>Demo</a>{% endif %}
+        {% if page.source != null %}<a class="pure-button button-small" href="{{ page.source }}"><i class="fa fa-code"></i>Source code</a>{% endif %}
+    </p>
     {{ content }}
 <!--    {% if page.comments %}<div id="disqus_thread"></div>{% endif %}-->
   </div>
