--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,40 +1,43 @@
 <head>
-  <link href="http://gmpg.org/xfn/11" rel="profile">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-  <!-- Enable responsiveness on mobile devices-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
-  <title>
+    <link href="http://gmpg.org/xfn/11" rel="profile">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="content-language" content="en-us" />
+    <meta name="description" content="{{ page.description }}">
+    <meta name="keywords" content="{% for tag in page.tags %}{{ tag }}, {% endfor %}">
+    <meta name="author" content="{{site.author.codename}}">
+    <!-- Enable responsiveness on mobile devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    
+    <title>
     {% if page.title == "Home" %}
       {{ site.title }} &middot; {{ site.tagline }}
     {% else %}
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
-  </title>
+    </title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/font-awesome-4.3.0.min.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/buttons-min.css"> <!-- pure css -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/forms-min.css"> <!-- pure css -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/boon-font.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/mildronize.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
-  <!-- Search bar -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/expanding-search-bar.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="{{ site.baseurl }}public/css/font-awesome-4.3.0.min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}public/css/buttons-min.css"> <!-- pure css -->
+    <link rel="stylesheet" href="{{ site.baseurl }}public/css/forms-min.css"> <!-- pure css -->
+    <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}public/css/boon-font.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}public/css/mildronize.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+    <!-- Search bar -->
+    <link rel="stylesheet" href="{{ site.baseurl }}public/css/expanding-search-bar.css">
 
-  <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
+    <!-- Icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
                                  <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.ico">
 
-  <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
-  <!--  Google Analytics Script-->
-  <script>
+    <!-- RSS -->
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
+    <!--  Google Analytics Script-->
+    <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -42,5 +45,5 @@
 
     ga('create', '{{ site.google_analytics_id }}', 'auto');
     ga('send', 'pageview');
-  </script>
+    </script>
 </head>
