--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,12 +3,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="content-language" content="en-us" />
-    <meta name="description" content="{{ page.description }}">
-    <meta name="keywords" content="{% for tag in page.tags %}{{ tag }}, {% endfor %}">
+    <meta name="description" content="{% if page.title == "Home" %}{{ site.description }}{% else %}{{ page.description }}{% endif %}">
+    <meta name="keywords" content="{% if page.title == "Home" %}{% for tag in site.keywords %}{{ tag }}, {% endfor %}{% else %}{% for tag in page.tags %}{{ tag }}, {% endfor %}{% endif %}">
     <meta name="author" content="{{site.author.codename}}">
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    
+
     <title>
     {% if page.title == "Home" %}
       {{ site.title }} &middot; {{ site.tagline }}
