--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -16,7 +16,7 @@ layout: default
     <p class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</p>
     <p class="entry-tags">{% for tag in page.tags %}<div class="label"><a href="{{ site.url }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></div>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
 <!--    {% if page.comments %}<p><a href="{{ site.url }}{{ page.url }}#disqus_thread">Comments</a></p>{% endif %}-->
-    <p>{{ page.description }}</p>
+    <!-- <p>{{ page.description }}</p> -->
     {% if page.image != null %}<img src="{{ page.image }}">{% endif %}
     <p>
         {% if page.home != null %}<a class="pure-button button-small" href="{{ page.home }}"><i class="fa fa-home"></i>Home</a>{% endif %}
