--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -27,3 +27,5 @@ layout: default
 <!--    {% if page.comments %}<div id="disqus_thread"></div>{% endif %}-->
   </div>
 </article>
+
+{% include disqus.html %}
