remove comment count

--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -30,5 +30,5 @@ layout: default
 
 {% if site.comment and page.comment == null %}
     {% include disqus.html %}
-    {% include disqus_comment_count.html %}
+    <!-- {% include disqus_comment_count.html %} -->
 {% endif %}
