add last active date on sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,6 +42,6 @@
     </p>
 
 
-    <p class="text-small">Mildronize &copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p class="text-small">Mildronize &copy; {{ site.time | date: '%Y' }}. All rights reserved.<br/>Last active date: {{ site.time | date_to_string }}</p>
   </div>
 </div>
