--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,10 @@ layout: default
     <p class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</p>
     <p class="entry-tags">{% for tag in page.tags %}<div class="label"><a href="{{ site.url }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></div>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
     <!-- {% if site.comment and page.comment == null %}<p><a href="{{site.baseurl}}{{page.url}}#disqus_thread">Comments</a></p>{% endif %} -->
+    {% if page.toc == true %}
+      <div id="toc"></div>
+      <hr>
+    {% endif %}
     {{ content }}
 <!--    {% if page.comments %}<div id="disqus_thread"></div>{% endif %}-->
   </div>
@@ -39,4 +43,14 @@ layout: default
 {% if site.comment and page.comment == null %}
     {% include disqus.html %}
     <!-- {% include disqus_comment_count.html %} -->
+{% endif %}
+
+{% if page.toc == true %}
+    <script src="{{ site.baseurl }}public/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}public/js/toc.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#toc').toc({title: "<h2>Contents</h2>", showSpeed: 0, listType: 'ul'});
+        });
+    </script>
 {% endif %}
