--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,9 +33,10 @@
     <p class="social-icons">
       <!-- <a href="{{ site.baseurl }}search"><i class="fa fa-search fa-2x"></i></a> -->
       <a href="https://github.com/mildronize"><i class="fa fa-github fa-2x"></i></a>
+      <a href="https://twitter.com/mildronize"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
       <!-- <a href="bitbucket"><i class="fa fa-bitbucket fa-2x"></i></a> -->
-<!--      <a href="twitter"><i class="fa fa-twitter fa-2x"></i></a>-->
+      
 <!--      <a href="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>-->
 <!--      <a href="google-plus"><i class="fa fa-plus fa-2x"></i></a>-->
 
