--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,21 +18,21 @@
     </title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/font-awesome-4.3.0.min.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/buttons-min.css"> <!-- pure css -->
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/forms-min.css"> <!-- pure css -->
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/boon-font.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/mildronize.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/font-awesome-4.3.0.min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/buttons-min.css"> <!-- pure css -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/forms-min.css"> <!-- pure css -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/hyde.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/boon-font.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/mildronize.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
     <!-- Search bar -->
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/expanding-search-bar.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/expanding-search-bar.css">
 
     <!-- Icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
-                                 <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-144-precomposed.png">
+                                 <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
 
     <!-- RSS -->
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
