--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
   <div class="post">
     <h1 itemprop="name" class="post-title">{{ page.title }}</h1>
     <p class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</p>
-    <p class="entry-tags">{% for tag in page.tags %}<div class="label"><a href="{{ site.url }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></div>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
+    <p class="entry-tags">{% for tag in page.tags %}<div class="label"><a href="{{ site.url }}{{ site.baseurl }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></div>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
     <!-- {% if site.comment and page.comment == null %}<p><a href="{{site.baseurl}}{{page.url}}#disqus_thread">Comments</a></p>{% endif %} -->
     {% if page.toc == true %}
       <div id="toc"></div>
@@ -31,7 +31,7 @@ layout: default
     {% for post in site.related_posts limit:3 %}
       <li>
         <h3>
-          <a href="{{ post.url }}">
+          <a href="{{ site.baseurl }}{{ post.url }}">
             {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
           </a>
@@ -46,8 +46,8 @@ layout: default
 {% endif %}
 
 {% if page.toc == true %}
-    <script src="{{ site.baseurl }}public/js/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}public/js/toc.js"></script>
+    <script src="{{ site.baseurl }}/public/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/public/js/toc.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             $('#toc').toc({title: "<h2>Contents</h2>", showSpeed: 0, listType: 'ul'});
