--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,6 +8,8 @@
         </a>
       </h2>
       <p class="description">{{ site.description }}</p>
+      <a href="{{ site.url }}/{{ site.changelangurl }}">{{ site.changelang }}</a>
+        <div class="line-sidebar"></div>
     </div>
 
     <nav class="sidebar-nav">
@@ -27,7 +29,7 @@
         {% endif %}
       {% endfor %}
 
-
+        
     </nav>
 
     <p class="social-icons">
