--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
             if (x == null || x == "") {
                 return false;
             }
-            window.location.href = "{{ site.baseurl}}search/#/"+x;
+            window.location.href = "{{ site.baseurl}}/search/#/"+x;
             return false;
         }
       </script>
