--- a/public/css/mildronize.css
+++ b/public/css/mildronize.css
@@ -70,6 +70,11 @@ blockquote {
   display: inline-block;
   margin: 0px;
 }
+.entry-tags{
+  display: inline;
+  margin-left:7px;
+}
+
 .label {
   background-color: #999;
   padding: 2px 4px;
