--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,19 +2,11 @@
 layout: default
 ---
 
-<!--
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-  {{ content }}
-</div>
--->
-
 <article itemscope itemtype="http://schema.org/Article">
   <div class="post">
     <h1 itemprop="name" class="post-title">{{ page.title }}</h1>
-    <p class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</p>
-    <p class="entry-tags">{% for tag in page.tags %}<div class="label"><a href="{{ site.url }}{{ site.baseurl }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></div>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
+    <i class="icon fa fa-calendar-o"></i><span class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</span>
+    <i class="icon fa fa-tags"></i><p class="entry-tags">{% for tag in page.tags %}<div class="label"><a href="{{ site.url }}{{ site.baseurl }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></div>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
     <!-- {% if site.comment and page.comment == null %}<p><a href="{{site.baseurl}}{{page.url}}#disqus_thread">Comments</a></p>{% endif %} -->
     {% if page.toc == true %}
       <div id="toc"></div>
