--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -9,7 +9,7 @@ layout: default
     <i class="icon fa fa-tags"></i><p class="entry-tags">{% for tag in page.tags %}<span class="label"><a href="{{ site.url }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></span>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
 <!--    {% if page.comments %}<p><a href="{{ site.url }}{{ page.url }}#disqus_thread">Comments</a></p>{% endif %}-->
     <!-- <p>{{ page.description }}</p> -->
-    {% if page.image != null %}<img src="{{ site.baseurl }}/{{ page.image }}">{% endif %}
+    {% if page.image != null %}<img alt="{{page.title}}" src="{{ site.baseurl }}/{{ page.image }}">{% endif %}
 
     <p>
         {% if page.home != null %}<a class="pure-button button-small" href="{{ page.home }}"><i class="fa fa-home"></i>Home</a>{% endif %}
