fix theme & change fonts

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
         {% endif %}
       {% endfor %}
 
-        
+
     </nav>
 
     <p class="social-icons">
@@ -38,13 +38,13 @@
       <a href="https://twitter.com/mildronize"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="{{ site.baseurl}}/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
       <!-- <a href="bitbucket"><i class="fa fa-bitbucket fa-2x"></i></a> -->
-      
+
 <!--      <a href="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>-->
 <!--      <a href="google-plus"><i class="fa fa-plus fa-2x"></i></a>-->
 
     </p>
 
 
-    <p class="text-small">Mildronize &copy; {{ site.time | date: '%Y' }}. All rights reserved.<br/>Last active date: {{ site.time | date_to_string }}</p>
+    <p class="text-small">Build date: {{ site.time | date_to_string }}<br/>Powered by <a href="https://jekyllrb.com">Jekyll</a><br/>Mildronize &copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
