--- a/_includes/head.html
+++ b/_includes/head.html
@@ -78,8 +78,9 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/hyde.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/boon-font.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/mildronize.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"> -->
 
+    <link href="https://fonts.googleapis.com/css?family=Pattaya|Pridi:300,600&subset=thai" rel="stylesheet">
     <!-- Search bar -->
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/expanding-search-bar.css">
 
