--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,11 @@ layout: default
   <div class="post">
     <h1 itemprop="name" class="post-title">{{ page.title }}</h1>
     <i class="icon fa fa-calendar-o"></i><span class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</span>
-    <i class="icon fa fa-tags"></i><p class="entry-tags">{% for tag in page.tags %}<div class="label"><a href="{{ site.url }}{{ site.baseurl }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></div>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
+    <i class="icon fa fa-tags"></i><p class="entry-tags">
+      {% for tag in page.tags %}
+        <span class="label"><a href="{{ site.url }}{{ site.baseurl }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></span>
+        {% comment %} {% unless forloop.last %} {% endunless %} {% endcomment %}
+      {% endfor %}
     <!-- {% if site.comment and page.comment == null %}<p><a href="{{site.baseurl}}{{page.url}}#disqus_thread">Comments</a></p>{% endif %} -->
     {% if page.toc == true %}
       <div id="toc"></div>
