change header font

--- a/public/css/mildronize.css
+++ b/public/css/mildronize.css
@@ -22,7 +22,7 @@ html {
   font-family: Pridi, serif;
 }
 h1{
-  font-family: Pattaya, serif;
+  font-family: Pridi, serif;
 }
 
 @media (min-width: 64em) {
