change header font

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -80,7 +80,7 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/mildronize.css">
     <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"> -->
 
-    <link href="https://fonts.googleapis.com/css?family=Pattaya|Pridi:300,600&subset=thai" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kanit:400|Pridi:300&subset=thai" rel="stylesheet">
     <!-- Search bar -->
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/expanding-search-bar.css">
 
