fix domain, change disqus shortcode

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -4,7 +4,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'mildronize';
+    var disqus_shortname = 'mildronize-com';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
