--- a/_includes/disqus_comment_count.html
+++ b/_includes/disqus_comment_count.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'mildronize';
+    var disqus_shortname = 'mildronize-com';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function () {
