fix icon, upload new posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -85,7 +85,8 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/expanding-search-bar.css">
 
     <!-- Icons -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
+    <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico"> -->
+    <link rel="icon" href="{{ site.baseurl }}/public/favicon.png">
 
     <!-- RSS -->
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
