--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,13 +71,14 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/font-awesome-4.4.0.min.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/buttons-min.css"> <!-- pure css -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/forms-min.css"> <!-- pure css -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/buttons-min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/forms-min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/hyde.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/boon-font.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/mildronize.css">
+    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/public/css/styles.css"> -->
     <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"> -->
 
     <link href="https://fonts.googleapis.com/css?family=Kanit:400|Pridi:300&subset=thai" rel="stylesheet">
