change to my custom bulma theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,6 @@
       </script>
   <body>
 
-    {% include sidebar.html %}
     <!-- Thank search bar from http://tympanus.net/Tutorials/ExpandingSearchBar/ -->
     <div class="search-container">
         <div id="sb-search" class="sb-search">
@@ -24,9 +23,19 @@
             </form>
         </div>
     </div>
-    <div class="content container">
-      {{ content }}
-    </div>
+    {% include header.html %}
+    <div class="container">
+        <div class="columns">
+          <div class="column is-8-desktop is-offset-2-desktop is-8-tablet is-offset-2-tablet">
+            <div class="content is-size-6 is-size-5-fullhd">
+                {{ content }}
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    {% include footer.html %}
+
     {% include tail.html %}
 
   </body>
