--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -2,8 +2,125 @@
 # Front matter comment to ensure Jekyll properly reads file.
 ---
 
-// Imports
-@import "base";
-@import "type";
-@import "code";
-@import "layout";
+// Bulma.io CSS Framework
+@import 'bulma';
+
+// Font
+@import url("Trirong.css");
+
+@mixin word-wrap() {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
+
+.word-wrap {
+    @include word-wrap();
+}
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    padding: 20px;
+}
+
+
+h1,h2,h3, .title, .logo{
+    font-family: 'Trirong', sans-serif;
+    font-weight: 600;
+    // font-family: 'supermarket', Helvetica, Arial, sans-serif;
+}
+
+.logo a{
+  color:  #0D47A1;
+}
+
+.box{
+  box-shadow: none;
+  padding: .9rem;
+}
+
+.subtitle{
+  color: $grey-light;
+}
+
+.title a {
+  color: $grey-dark;
+}
+
+.title a:hover {
+  color: $blue;
+}
+
+.tag a{
+  color: $grey-dark;
+}
+
+// header
+.menu-link a{
+  color: $grey-dark;
+}
+.menu-link a:hover{
+  color: $blue;
+}
+
+
+.content blockquote{
+  background-color: $white;
+  font-style: italic;
+  color: $grey;
+}
+
+.footer{
+  background-color: transparent;
+}
+
+
+img[class=post-cover]{
+  max-height: 300px; 
+  width: 100%;
+  object-fit: cover ;
+}
+
+img[class=post-list]{
+  max-height: 200px; 
+  max-width: 100%;
+
+}
+
+/* Related posts */
+.related {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.related-posts {
+  padding-left: 0;
+  list-style: none;
+}
+.related-posts h3 {
+  margin-top: 0;
+}
+.related-posts li small {
+  font-size: 75%;
+  color: #999;
+}
+.related-posts li a:hover {
+  color: #268bd2;
+  text-decoration: none;
+}
+.related-posts li a:hover small {
+  color: inherit;
+}
