fix search page, add more link on footer

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,18 +70,17 @@
     </title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/font-awesome-4.4.0.min.css">
-    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/public/css/buttons-min.css">
+    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/public/css/font-awesome-4.4.0.min.css"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/public/css/buttons-min.css"> -->
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/forms-min.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
+    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/hyde.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/boon-font.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/mildronize.css"> -->
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/styles.css">
     <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"> -->
-
-    <link href="https://fonts.googleapis.com/css?family=Kanit:400|Pridi:300&subset=thai" rel="stylesheet">
     <!-- Search bar -->
     <link rel="stylesheet" href="{{ site.baseurl }}/public/css/expanding-search-bar.css">
 
