--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,14 @@
 <footer class="footer">
     <div class="content has-text-centered is-size-6">
       <div>Copyright © 2018 by Thada Wangthammang</div>
-      <div class="box">
-
-          <a href="https://github.com/mildronize"><i class="fa fa-github fa-2x"></i></a>
-          <a href="https://twitter.com/mildronize"><i class="fa fa-twitter fa-2x"></i></a>
-          <a href="{{ site.baseurl}}/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
+      <div class="is-size-7">Build date: {{ site.time | date_to_string }} Powered by <a href="https://jekyllrb.com">Jekyll</a></div>
+      <div class="box user-link">
+          <a class="user-link" href="https://github.com/mildronize"><i class="fab fa-github"></i></a>
+          <a class="user-link" href="https://twitter.com/mildronize"><i class="fab fa-twitter"></i></a>
+          <a class="user-link" href="https://www.linkedin.com/in/thada-wangthammang-281894a6"><i class="fab fa-linkedin"></i></a>
+          <a class="user-link" href="mailto:mildronize@gmail.com"><i class="fas fa-envelope"></i></a>
+          <a class="user-link" href="https://medium.com/@mildronize"><i class="fab fa-medium"></i></a>
+          <a class="user-link" href="{{ site.baseurl}}/feed.xml"><i class="fas fa-rss"></i></a>
       </div>
 
     </div>
