use search button instead search bar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,12 @@
               <span class="menu-link"><a href="/about" >about</a></span>
               <!-- <span class="menu-link"><a href="/#" >project</a></span> -->
               <span class="menu-link"><a href="/" >blog</a></span>
+              <span class="menu-link is-size-5"><a href="/search"><i class="fas fa-search 2x"></i></a></span>
           </div>
+          <!-- <div class="column"><a href="#"><i class="fas fa-search"></i></a></div> -->
 
         </div>
-        <hr />
+        <hr>
       </div>
     </div>
   </div>
