--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -77,6 +77,7 @@ h1,h2,h3, .title, .logo{
 // header
 .menu-link a{
   color: $grey-dark;
+  margin-right:10px;
 }
 .menu-link a:hover{
   color: $blue;
