--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,18 +3,18 @@
       <div class="column is-8-desktop is-offset-2-desktop is-8-tablet is-offset-2-tablet">
         <div class="columns">
           <div class="column">
-            <div class="logo is-size-3">
+            <div class="logo is-size-3 has-text-centered-mobile is-size-5-mobile">
               <a href="/" >mildronize</a>
               <small></small>
 
             </div>
 
           </div>
-          <div class="column has-text-right has-text-centered-mobile is-size-4">
+          <div class="column has-text-right has-text-centered-mobile is-size-4 is-size-6-mobile">
               <span class="menu-link"><a href="/about" >about</a></span>
               <!-- <span class="menu-link"><a href="/#" >project</a></span> -->
               <span class="menu-link"><a href="/" >blog</a></span>
-              <span class="menu-link is-size-5"><a href="/search"><i class="fas fa-search 2x"></i></a></span>
+              <span class="menu-link is-size-5 is-size-7-mobile"><a href="/search"><i class="fas fa-search 2x"></i></a></span>
           </div>
           <!-- <div class="column"><a href="#"><i class="fas fa-search"></i></a></div> -->
 
