--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -33,6 +33,10 @@
     box-sizing: border-box;
 }
 
+.pagination-item{
+  margin-right:1rem;
+}
+
 html {
     height: 100%;
 }
@@ -77,7 +81,7 @@ h1,h2,h3, .title, .logo{
 // header
 .menu-link a{
   color: $grey-dark;
-  margin-right:10px;
+  margin-right:1rem;
 }
 .menu-link a:hover{
   color: $blue;
