--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="content has-text-centered is-size-6">
       <div>Copyright © 2018 by Thada Wangthammang</div>
       <div class="is-size-7">Build date: {{ site.time | date_to_string }} Powered by <a href="https://jekyllrb.com">Jekyll</a></div>
-      <div class="box user-link">
+      <div class="box user-link is-size-5">
           <a class="user-link" href="https://github.com/mildronize"><i class="fab fa-github"></i></a>
           <a class="user-link" href="https://twitter.com/mildronize"><i class="fab fa-twitter"></i></a>
           <a class="user-link" href="https://www.linkedin.com/in/thada-wangthammang-281894a6"><i class="fab fa-linkedin"></i></a>
