--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article itemscope itemtype="http://schema.org/Article">
   <div class="post">
     <h1 itemprop="name" class="post-title">{{ page.title }}</h1>
-    <i class="icon fa fa-calendar-o"></i><span class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</span>
+    <i class="icon far fa-calendar"></i><span class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</span>
     <i class="icon fa fa-tags"></i><span class="entry-tags">
       {% for tag in page.tags %}
         <span class="tag is-light"><a href="{{ site.url }}{{ site.baseurl }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></span>
@@ -17,6 +17,7 @@ layout: default
       <div id="toc"></div>
       <hr>
     {% endif %}
+    <div style="margin:1.5rem;"></div>
     {{ content }}
 <!--    {% if page.comments %}<div id="disqus_thread"></div>{% endif %}-->
   </div>
