--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article itemscope itemtype="http://schema.org/Article">
   <div class="post">
-    <h1 itemprop="name" class="post-title">{{ page.title }}</h1>
+    <h2 class="post-title">{{ page.title }}</h2>
     <i class="icon far fa-calendar"></i><span class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</span>
     <i class="icon fa fa-tags"></i><span class="entry-tags">
       {% for tag in page.tags %}
@@ -24,16 +24,14 @@ layout: default
 </article>
 <hr>
 <div class="related">
-  <h2>Related Posts</h2>
+  <h3>Related Posts</h3>
   <ul class="related-posts">
     {% for post in site.related_posts limit:5 %}
       <li>
-        <h3>
           <a href="{{ site.baseurl }}{{ post.url }}">
             {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
           </a>
-        </h3>
       </li>
     {% endfor %}
   </ul>
