--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
             </div>
 
           </div>
-          <div class="column has-text-right has-text-centered-mobile is-size-4 is-size-5-mobile">
+          <div class="column has-text-right has-text-centered-mobile is-size-5">
               {% assign pages_list = site.pages %}
               {% for node in pages_list %}
                 {% if node.title != null %}
