add webpack for building js

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -44,8 +44,7 @@ layout: default
 {% endif %}
 
 {% if page.toc == true %}
-    <script src="{{ site.baseurl }}/public/js/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/public/js/toc.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/public/js/main.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             $('#toc').toc({title: "<h2>Contents</h2>", showSpeed: 0, listType: 'ul'});
