--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -61,7 +61,7 @@
     <!-- <link rel="preload" href="{{ site.baseurl }}/public/css/styles.css" as="style"> -->
     <link rel="preload" href="{{ site.baseurl }}/public/css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="{{ site.baseurl }}/public/css/styles.css"></noscript>
-    <script type="text/javascript" src="{{ site.baseurl }}/public/js/loadCSS.min.js"></script>
+    <script async type="text/javascript" src="{{ site.baseurl }}/public/js/loadCSS.min.js"></script>
     <script>loadCSS("{{ site.baseurl }}/public/css/styles.css");</script>
 
     <!-- Icons -->
