--- a/src/_sass/_bulma_postload.scss
+++ b/src/_sass/_bulma_postload.scss
@@ -26,3 +26,6 @@
 // @import "bulma/grid/columns.sass";
 @import "bulma/grid/tiles.sass";
 
+@import 'bulma/base/all';
+@import "bulma/elements/content.sass";
+
